# DECONVersation

./: ..gitignore.swp  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml
DECONVersation/: preprocessing.py
cell_lines/rmd/: convert_to_h5ad.Rmd
deconversation/: __init__.py  core.py  deconvolution.py  embeddings.py  evaluation.py  models.py  preprocessing.py  pseudobulk.py  test_all_functions_and_features.ipynb  test_script.py  test_script.slurm  test_script_c2s.err  visualization.py
envs/: deconv_c2s_cuda124.yml  deconv_ch.yml  deconv_gf.yml  deconv_scgpt.yml
notebooks/: compare_scVI_latent_layer.ipynb  compile_plots_and_metrics_for_poster.ipynb  scVI_deconv_ml_function_3.ipynb
notebooks/.ipynb_checkpoints/: compare_scVI_latent_layer-checkpoint.ipynb  geneformer_deconv_ml_function_3-checkpoint.ipynb  geneformer_deconv_ml_function_3_finetuned-checkpoint.ipynb  get_sig_matrix-checkpoint.ipynb  nnls_geneformer_finetuned-checkpoint.ipynb  nnls_geneformer_scVI-checkpoint.ipynb  scvi_deconv_from_pseudobulk-checkpoint.ipynb
notebooks/c2s/: c2s_embed_function.ipynb
notebooks/cell_lines/: bulk_RNAseq_explore.ipynb  cell_lines_deconv.ipynb
notebooks/celltype/: create_pseudobulk_extract_embed_gf.py  create_pseudobulk_extract_embed_gf_test.slurm  create_single_id_pseudobulk_extract_embed_gf.slurm  create_single_id_pseudobulk_extract_embed_gf_test.slurm  get_geneformer_embeddings_sig_mat.slurm  get_scVI_embeddings.py  run_nnls.slurm
notebooks/lineage/: cell_lines_deconv.ipynb  del.slurm  geneformer_deconv_ml_function_3_celltype.ipynb  get_geneformer_embeddings.py  get_geneformer_embeddings.slurm  get_scVI_embeddings.slurm  run_nnls_scVI.slurm  train_random_forest_regr.slurm  (+3 more)
results/: Counts_estimated_proportions.csv  PCA_estimated_proportions.csv  c2s_410_estimated_proportions.csv  cell2sentence_pseudobulk_deconvolution_results_nnls.csv  cellHermes_estimated_proportions.csv  geneformer_estimated_proportions.csv  geneformer_pseudobulk_deconvolution_results_nnls.csv  pseudobulk_true_proportions.csv  scVI_estimated_proportions.csv  scgpt_estimated_proportions.csv
rmd/: cell_lines_data_wrangling.Rmd  geneformer_deconv_ml_function_3.ipynb  hyperparameter_tuning_gf_scVI.ipynb  scVI_deconv_ml_function_3.ipynb
scripts/: music_czi_pseudobulk_vs_czi_ref.R  run_music_czi_pseudo_vs_czi_ref.sh  run_music_czi_pseudo_vs_czi_ref_celltype.sh
tutorials/: benchmarking_pseudobulking_all_methods.ipynb  benchmarking_pseudobulking_all_methods_flex.ipynb  benchmarking_pseudobulking_all_methods_single_nuc.ipynb  deconvolution_using_PCA_on_pseudobulk.ipynb  evaluate_pseudobulk_deconvolution_results.ipynb  extracting_embeddings_from_bulk.ipynb  extracting_embeddings_from_bulk_all_solvers.ipynb  extracting_embeddings_from_pseudobulk.ipynb  extracting_embeddings_from_pseudobulk_c2s.ipynb  extracting_embeddings_from_pseudobulk_cellHermes.ipynb  extracting_embeddings_from_pseudobulk_geneformer.ipynb  extracting_embeddings_from_pseudobulk_scGPT.ipynb  extracting_embeddings_from_pseudobulk_scVI.ipynb  finetuning_geneformer_for_cell_type_classification.ipynb  test_c2s_finetuning_functions.ipynb  test_finetuning_functions.ipynb  test_scVI_functions.ipynb
(+202 files in other folders)
